# 4-dof-arm

./: CMakeLists.txt  README.md
arduino/servo_controller/: platformio.ini
arduino/servo_controller/include/: protocol.h  servo_limits.h
arduino/servo_controller/src/: main.cpp
config/: calibration.yaml  camera.yaml  grasp_primitives.yaml  model.yaml  robot.yaml
include/grasp_system/app/: vision_viewer.h
include/grasp_system/camera/: camera_config.h  orbbec_camera.h
include/grasp_system/comms/: serial_arduino.h
include/grasp_system/core/: logger.h  state_machine.h  types.h
include/grasp_system/perception/: features_color.h  pointcloud_builder.h  scene_summary.h  segmentation.h  tracking.h
include/grasp_system/planning/: calibration.h  fk.h  ik.h  primitives.h  robot_config.h  safety_checks.h
include/grasp_system/viz/: overlays.h  pcl_viewer.h
python/: pyproject.toml
python/grasp_model/: __init__.py  annotate_frame.py  model_cli.py  model_client.py  schemas.py
shared/protocol/: protocol.h
src/: calibration.cpp  main.cpp
src/app/: vision_viewer.cpp
src/camera/: orbbec_camera.cpp
src/comms/: serial_arduino.cpp
src/core/: state_machine.cpp
src/perception/: features_color.cpp  pointcloud_builder.cpp  scene_summary.cpp  segmentation.cpp  tracking.cpp
src/planning/: calibration.cpp  fk.cpp  ik.cpp  primitives.cpp  robot_config.cpp  safety_checks.cpp
src/viz/: overlays.cpp  pcl_viewer.cpp
